css/style.css
/* ... */
.btn-large.btn-jumbo:hover {
    background-color: #32c4e9;
    color: #fff;
}

#jumbo_btn2 {
    background-color: #32c4e9;
    color: #fff;
    
}

#jumbo_btn2:hover {
    background-color: #ffffff;
    color: #32c4e9;
}


/* End Jumbotron */


/* Services Section */

.services {
    border-top: 1px solid #d3d3d3;
    background-color: #f7f7f7;
    padding: 10px 0px;
}

.services-header{
    padding-top:20px;
}

.services-paragraph {
    font-family: 'open sans', 'sans-serif';
    color: #232929;
    font-size: 18px;
    text-align: center;
    padding: 0 100px;
    margin-bottom: 50px;
}

.services:before {
    display: block;
    position: relative;
    content: '';
    width: 50px;
    height: 50px;
    bottom: 35px;
    left: 48%;
    background-color: #fff;
    -ms-transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
    z-index: 1;
    border-bottom: 1px solid #d3d3d3;
    border-right: 1px solid #d3d3d3;
}

.service {
    text-align: center;
    margin: 20px;
}

.services .services-heading {
    font-family: 'open sans', 'sans-serif';
    font-size: 40px;
}

.service .service-content h3 {
    color: #232929;
    font-size: 18px;
    font-weight: 600;
    font-family: 'open sans';
}

.service .service-icon:hover .img-icon {
    transform:translateY(-3px);
}

.service:hover .service-icon i {
    -webkit-animation: spin 0.5s linear;
    -moz-animation: spin 0.5s linear;
    -o-animation: spin 0.5s linear;
    animation: spin 0.5s linear;
    animation-iteration-count: 1;
}

@-moz-keyframes spin {
    from {
        -moz-transform: rotate(0deg);
    }
    to {
        -moz-transform: rotate(360deg);
    }
}

@-webkit-keyframes spin {
    from {
        -webkit-transform: rotate(0deg);
    }
    to {
        -webkit-transform: rotate(360deg);
    }
}

@keyframes spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

.services-btn {
    margin: 50px;
    text-align: center;
}

.services-btn a {
    background-color: rgba(255, 255, 255, 0);
    color: #232929;
    font-weight: 600;
    padding: 10px 30px;
    margin: 8px;
    text-decoration: none;
    text-transform: uppercase;
    font-family: 'open sans', 'sans-serif';
    font-size: 16px;
    border: 2px solid #232929;
    border-radius: 4px;
}

.services-btn a:hover {
    border-color: #32c4e9;
    color: #32c4e9;
}



/*Choose-us-section*/

.choose-us-main-header {
    font-size: 50px;
    font-family: 'roboto', 'open sans';
    color: #fff;
    font-weight: 800;
    text-align: center;
    
    
}

.choose-us-header-text {
    font-family: 'open sans';
    text-align: center;
    font-size: 18px;
    color: #fff;
}

.choose-us-header {
    height:50vh;
    padding-top:20px;
    position: relative;
    background: radial-gradient(#222, #000);
    
}

.choose-us-header::before {
    border-right: 40px solid transparent;
    border-left: 100% solid #f7f7f7;
    content: '';
    position: absolute;
    right: 50%;
    bottom: 0;
    width: 50%;
    z-index: 100;
    border-bottom: 40px solid #f7f7f7;
}

.choose-us-header::after {
    left: 50%;
    border-left: 40px solid transparent;
    border-right: 100% solid #f7f7f7;
    content: '';
    position: absolute;
    bottom: 0;
    width: 50%;
    z-index: 100;
    border-bottom: 40px solid #f7f7f7;
}

.choose-us {
    background-color: #f7f7f7;
}

.choose-us .why-choose {
    position: relative;
    width: 100%;
    margin-bottom: 60px;
    margin-top: 40px;
}

.why-choose-header.header-right {
    margin-right: 40px;
}

.why-choose-header.header-left {
    margin-left: 40px;
}

.why-choose h5 {
    color: #000;
    font-size: 18px;
    font-family: 'open sans';
    font-weight: 600;
}

.why-choose a {
    text-decoration: none;
}

.why-choose a:hover h5 {
    color: #32c4e9;
}

.why-choose p {
    font-family: 'open sans', 'sans-serif';
    font-size: 14px;
    color: #3d3d3d;
}

.why-choose.why-choose-right .simple-icon i {
    border: 1px solid #232929;
    color: #232929;
    border-radius: 50%;
    padding: 15px;
    font-size: 22px
}

.why-choose.why-choose-left .simple-icon i {
    border: 1px solid #232929;
    color: #232929;
    border-radius: 50%;
    padding: 15px;
    font-size: 22px
}

.choose-us .why-choose-header.header-left {
    text-align: left;
    padding-right: 30px;
}

.choose-us .why-choose-header.header-right {
    text-align: right;
}

.choose-us .why-choose.why-choose-left,
.choose-us .why-choose.why-choose-right {
    padding-left: 100px;
    text-align: left;
}

.choose-us .why-choose .simple-icon {
    position: absolute;
    top: 0;
}

.choose-us .why-choose.why-choose-left .simple-icon,
.choose-us .why-choose.why-choose-right .simple-icon {
    left: 0;
}



@media (min-width: 992px) {
    .choose-us .why-choose.why-choose-left {
        padding-right: 100px;
        padding-left: 0;
        text-align: right;
    }
    .choose-us .why-choose.why-choose-left .simple-icon {
        right: 0;
        left: auto;
    }
}
/* ... */

